# ACTO

./: .gitignore  CHANGELOG.md  README.md  alembic.ini  config.example.toml  pyproject.toml  pytest.ini  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
acto-web/public/vid/: chain.webm
acto-web/src/: App.tsx  config.ts
acto-web/src/components/: Features.tsx  FleetManagement.tsx  Footer.tsx  HowItWorks.tsx  LoadingScreen.tsx  Navigation.tsx  OpenSource.tsx  Products.tsx  QuickInstall.tsx  ScrollAnimation.tsx  UseCases.tsx  index.ts
acto-web/src/pages/: About.tsx  Home.tsx  Privacy.tsx  Terms.tsx  Unlock.tsx  index.ts
acto/access/: solana_gate.py
acto/config/: settings.py
acto/fleet/: models.py  store.py
acto/proof/: __init__.py  async_engine.py  chaining.py  engine.py  versioning.py
acto/registry/: __init__.py  async_service.py  models.py  search.py  service.py
acto/security/: __init__.py  api_key_store.py  auth.py
acto/telemetry/: __init__.py  parsers.py  validator.py
acto_cli/commands/: completion.py  interactive.py  proof.py
acto_server/: app.py  dashboard.html  schemas.py
acto_server/routers/: auth.py  fleet.py  stats.py
acto_server/static/css/: dashboard.css  fleet.css  navigation.css  playground.css  stats.css
acto_server/static/js/: account.js  dashboard.js  docs.js  fleet.js  keys.js  modals.js  playground.js  stats.js  wallet-stats.js
api/: index.py
docs/: API.md  ARCHITECTURE.md  SECURITY.md  THREAT_MODEL.md
docs-site/: index.md  vercel.json
docs-site/.vitepress/: config.ts
docs-site/.vitepress/theme/: custom.css  index.ts
docs-site/api/: access.md  authentication.md  errors.md  health.md  overview.md  rate-limiting.md  statistics.md
docs-site/api/fleet/: devices.md  groups.md  health.md  overview.md
docs-site/api/proofs/: get.md  list.md  search.md  submit.md
docs-site/api/verification/: batch.md  verify.md
docs-site/cli/commands/: access.md  server.md
docs-site/guide/: quickstart.md  self-hosting.md
docs-site/sdk/: basic-usage.md
examples/: README.md
examples/notebooks/: 01_basic_proof_creation.ipynb  02_async_proof_operations.ipynb  03_registry_operations.ipynb  04_fleet_management.ipynb
examples/scripts/: fleet_example.py
migrations/: env.py
tests/: test_fuzzing.py  test_integration.py  test_proof_roundtrip.py  test_property_based.py  test_registry.py  test_reputation.py
(+4 files in other folders)
