[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "acto"
version = "0.5.16"
description = "Robotics proof-of-execution SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ACTO Contributors" }]
keywords = ["robotics", "telemetry", "proof", "verification", "solana", "web3"]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-json-logger>=2.0.7",
  "rich>=13.7",
  "typer>=0.12",
  "httpx>=0.27",
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "orjson>=3.10",
  "blake3>=0.4.1",
  "pynacl>=1.5.0",
  "tenacity>=8.2",
  "pyjwt>=2.8",
  "cryptography>=42.0",
  "mangum>=0.17.0",
]

[project.optional-dependencies]
core = []
solana = ["solana>=0.35.1"]
redis = ["redis>=5.0"]
psycopg2 = ["psycopg2-binary>=2.9"]
mysql = ["mysqlclient>=2.2"]
ros = ["rosbag2>=0.24.0", "rclpy>=3.3.0"]
protobuf = ["protobuf>=5.0.0"]
parquet = ["pyarrow>=15.0.0", "pandas>=2.0.0"]
vault = ["hvac>=1.2.0"]
aws = ["boto3>=1.34.0"]
security = ["acto[vault,aws]"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.5",
  "pytest-timeout>=2.2",
  "hypothesis>=6.100",
  "locust>=2.24",
  "bandit>=1.7",
  "safety>=3.0",
  "ruff>=0.6.9",
  "mypy>=1.11",
  "pre-commit>=3.6",
  "coverage>=7.5",
]
all = ["acto[solana,redis,ros,protobuf,parquet,security,dev]"]

[project.scripts]
acto = "acto_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["acto", "acto_cli", "acto_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["acto", "acto_cli", "acto_server"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "htmlcov", ".git", "migrations"]
skips = ["B101", "B601"]
